set(EXECUTABLE_NAME somner)
file(GLOB_RECURSE EXECUTABLE_SOURCES "*.c")
file(GLOB_RECURSE EXECUTABLE_HEADERS "*.h")

add_executable(${EXECUTABLE_NAME} ${EXECUTABLE_SOURCES} ${EXECUTABLE_HEADERS})

if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
	file(GLOB_RECURSE LINUX_SOURCES "*-linux.c")
	file(GLOB_RECURSE LINUX_HEADERS "*-linux.h")
	list(APPEND LIBRARY_SOURCES ${LINUX_SOURCES})
	list(APPEND LIBRARY_HEADERS ${LINUX_HEADERS})
	target_link_libraries(${EXECUTABLE_NAME} X11)
endif()

#if (UNIX)
#endif()

target_link_libraries(${EXECUTABLE_NAME} game)
